tests/baselines/reference/jsxJsxsCjsTransformCustomImport(jsx=react-jsxdev).errors.txt
jsxJsxsCjsTransformCustomImport.tsx(2,11): error TS2870: This JSX tag requires the module path 'preact/jsx-dev-runtime' to exist, but none could be found. Make sure you have the appropriate package installed.


==== jsxJsxsCjsTransformCustomImport.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    const a = <>
              ~~
!!! error TS2870: This JSX tag requires the module path 'preact/jsx-dev-runtime' to exist, but none could be found. Make sure you have the appropriate package installed.
      <p></p>
      text
      <div className="foo"></div>
    </>
    
    export {};